# ergvein-rusty

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  make-docker.sh  shell.nix  valgrind.sh
.github/workflows/: ci.yml
nix/modules/: bitcoin.nix  ergvein-rusty.nix
nix/modules/dashboards/: indexer.json
nix/pkgs/: bitcoin-node.nix
src/: filter.rs  main.rs  options.rs  utxo.rs
src/server/: block_explorer.rs  codec.rs  connection.rs  fee.rs  logic.rs  metrics.rs  mod.rs  rates.rs
