[package]
name = "ergvein-rusty"
version = "0.3.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
bitcoin-utxo = { git = "https://github.com/hexresearch/bitcoin-utxo", rev = "452327a2c805d83e663277e416e0832c9e9151ac" }
byteorder = "1"
bytes = "1"
chrono = "^0.4"
clap = "2.33.3"
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode", rev = "8c04d05aecc1d0f320fb1ebed0878772c1e83c72" }
dashmap = "4.0"
ergvein-filters = { git = "https://github.com/hexresearch/ergvein-filters", rev = "529d0dd4ff9bea3c0e2508ace972de58e2236740" }
ergvein-protocol = { path = "../ergvein-protocol" }
# ergvein-protocol = { git = "https://github.com/hexresearch/ergvein-protocol", rev = "58fcfc7711f23ff0d787002ae075618c6b33b649" }
fs2 = "0.4.3"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
prometheus = { version = "0.12.0", features = [ "process" ] }
rand = "0.8.3"
reqwest = { version = "0.11.2", features = [ "json" ] }
rocksdb = "0.15.0"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = [ "codec" ] }
warp = "0.3.1"
mempool_filters = {path = "../btc-mempool-filters"}
# mempool_filters = {git = "https://github.com/hexresearch/btc-mempool-filters", rev = "477a9d35ddda807302e6bd63043d306f35640284"}

# [profile.release]
# debug = 1
