[package]
name = "ergvein-rusty"
version = "0.3.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
byteorder = "1"
bytes = "1"
chrono = "^0.4"
clap = "2.33.3"
dashmap = "4.0"
fs2 = "0.4.3"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
prometheus = { version = "0.12.0", features = [ "process" ] }
rand = "0.8.3"
reqwest = { version = "0.11.2", features = [ "json" ] }
rocksdb = "0.15.0"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = [ "codec" ] }
warp = "0.3.1"

bitcoin-utxo = { git = "https://github.com/hexresearch/bitcoin-utxo", rev = "452327a2c805d83e663277e416e0832c9e9151ac" }
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode", rev = "8c04d05aecc1d0f320fb1ebed0878772c1e83c72" }
ergvein-filters = { git = "https://github.com/hexresearch/ergvein-filters", rev = "529d0dd4ff9bea3c0e2508ace972de58e2236740" }
ergvein-protocol = { git = "https://github.com/hexresearch/ergvein-protocol", rev = "6e85b2ac79adc282d3adb27adb1ea5cadfeba97d" }
mempool_filters = { path = "../btc-mempool-filters" }
# mempool_filters = {git = "https://github.com/hexresearch/btc-mempool-filters", rev = "1af5f4ed8e7e59003adff170ad84ed6ac6b85d34"}

# [profile.release]
# debug = 1
